<resources>
    <string name="app_name">Kurento_p2p_andorid</string>
    <string name="action_settings">Settings</string>
    <string name="kurento_title">kurento_webrtc_p2p_demo</string>

    <string name="name_pro">用户名称：</string>
    <string name="no_name">你还没有注册，请点击“+”进行注册</string>
    <string name="user_list">好友列表：</string>
    <string name="title_activity_settings">P2pSettings</string>
    <string name="register_promot">输入用户名:</string>
    <string name="input_name">请输入用户名。</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="no_connect">网络链接不存在.稍后再试。</string>
    <string name="incoming_call">来自%s的视频请求!</string>
    <string name="accept_call">接听</string>
    <string name="reject_call">扣死</string>

    <string name="disconnect_call">Disconnect Call</string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="add_room_description">Add new room to the list</string>
    <string name="remove_room_description">Remove room from the list</string>
    <string name="connect_description">Connect to the room</string>
    <string name="connect_loopback_description">Loopback connection</string>

    <!-- Strings related to Settings -->
    <!-- setting -->
    <string name="pref_key_setting_pref">p2p_pref</string>

    <string name="pref_key_miscellaneous_category">miscellaneous</string>
    <string name="pref_title_miscellaneous">Miscellaneous Settings</string>

    <string name="pref_key_host">host</string>
    <string name="pref_default_host">ws://10.2.154.71</string>
    <string name="pref_title_host">WebSokcet Host</string>
    <string name="pref_title_host_dialog">Enter the host url.</string>

    <string name="pref_key_port">host_port</string>
    <string name="pref_default_port">8080</string>
    <string name="pref_title_port">WebSocket port</string>
    <string name="pref_title_port_dialog">Enter the webSocket url port</string>

    <string name="pref_key_method">host_method</string>
    <string name="pref_default_method">mobile_call</string>
    <string name="pref_title_method">WebSocket method</string>
    <string name="pref_title_method_dialog">Enter the webSocket method</string>

    <string name="pref_key_stun"></string>
    <string name="pref_default_stun"></string>
    <string name="pref_title_stun">Stun server</string>
    <string name="pref_title_stun_dialog">Enter the stun server</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_play">PlayActivity</string>

    <string name="pref_key_video_settings">video_settings</string>
    <string name="pref_title_video_settings">Video Settings</string>

    <string name="pref_key_video_callable">videoCallAble</string>
    <string name="pref_title_video_callable">VideoCallAble</string>

    <string name="pref_key_video_code">Video Code</string>
    <string name="pref_title_video_code">Video Code</string>
    <string name="pref_default_video_code">VP8</string>
    <string name="pref_list_title_video_code">Video Code</string>

    <string name="pref_key_video_frame">Video Frame</string>
    <string name="pref_title_video_frame">Video Frame</string>
    <string name="pref_default_video_frame">default</string>
    <string name="pref_list_title_video_frame">Video Frame</string>


    <string name="pref_key_video_resulotion">Video Resolution</string>
    <string name="pref_title_video_resolution">Video Resolution</string>
    <string name="pref_default_video_resolution_value">640 x 480</string>
    <string name="pref__list_title_video_resolution">Video Resolution</string>

    <string name="pref_maxVideoBitrate_key">maxVideoBitrate_preference</string>
    <string name="pref_maxVideoBitrate_title">maxVideo bitrate setting.</string>
    <string name="pref_maxVideoBitrate_dlg">max Video bitrate setting.</string>
    <string name="pref_maxVideoBitrate_default">Default</string>

    <string name="pref_maxVideoBitratevalue_key">maxVideoBitratevalue_preference</string>
    <string name="pref_maxVideoBitratevalue_title">Video codec bitrate.</string>
    <string name="pref_maxVideoBitratevalue_dlg">Enter Video codec bitrate in kbps.</string>
    <string name="pref_maxVideoBitratevalue_default">1000</string>

    <string name="pref_audio_setting">Audio Setting</string>

    <string name="pref_maxAudiobitrate_key">maxAudiobitrate_preference</string>
    <string name="pref_MaxAudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_maxAudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_maxAudiobitrate_default">Default</string>

    <string name="pref_maxAudiobitratevalue_key">maxAudiobitratevalue_preference</string>
    <string name="pref_maxAudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_maxAudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_maxAudiobitratevalue_default">32</string>

    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">opus</string>

    <string name="pref_audioprocessing_key">audioprocessing_preference</string>
    <string name="pref_audioprocessing_title">Disable audio processing.</string>
    <string name="pref_audioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_audioprocessing_default">false</string>

</resources>
