<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/name_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_pro_tv"
            style="@style/nomal_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_pro" />

        <TextView
            android:id="@+id/name_tv"
            style="@style/nomal_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/no_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_ll"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical">

        <TextView
            style="@style/nomal_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_list" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/friend_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

    </LinearLayout>

</RelativeLayout>
